--- a/app/src/main/res/layout/activity_crear_academic_space.xml
+++ b/app/src/main/res/layout/activity_crear_academic_space.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CrearActividadActivity">
+    tools:context=".CrearAcademicSpace">
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -298,6 +298,7 @@
           android:layout_marginBottom="10dp"
           android:layout_weight="1"
           android:gravity="center"
+          android:onClick="irListaActividades"
           android:text="volver" />
 
     </LinearLayout>
